--- a/project/MyLeetCode.vcxproj.filters
+++ b/project/MyLeetCode.vcxproj.filters
@@ -20,6 +20,18 @@
     <ClCompile Include="..\Subsets_II.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="..\Permutations.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Permutations_II.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Combinations.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Letter_Combinations_of_Phone_Number.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\catch\catch.hpp">
