On Brute Force and Arrays.

--- a/project/MyLeetCode.vcxproj
+++ b/project/MyLeetCode.vcxproj
@@ -61,13 +61,35 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\3Sum.cpp" />
+    <ClCompile Include="..\src\3Sum_Closest.cpp" />
+    <ClCompile Include="..\src\4Sum.cpp" />
+    <ClCompile Include="..\src\Candy.cpp" />
+    <ClCompile Include="..\src\Climbing_Stairs.cpp" />
     <ClCompile Include="..\src\Combinations.cpp" />
+    <ClCompile Include="..\src\Gas_Station.cpp" />
+    <ClCompile Include="..\src\Gray_Code.cpp" />
     <ClCompile Include="..\src\Letter_Combinations_of_Phone_Number.cpp" />
+    <ClCompile Include="..\src\Longest_Consecutive_Sequence.cpp" />
     <ClCompile Include="..\src\Next_Permutation.cpp" />
     <ClCompile Include="..\src\Permutations.cpp" />
     <ClCompile Include="..\src\Permutations_II.cpp" />
+    <ClCompile Include="..\src\Permutation_Sequence.cpp" />
+    <ClCompile Include="..\src\Plus_One.cpp" />
+    <ClCompile Include="..\src\Remove_Duplicates_from_Sorted_Array.cpp" />
+    <ClCompile Include="..\src\Remove_Duplicates_from_Sorted_Array_II.cpp" />
+    <ClCompile Include="..\src\Remove_Element.cpp" />
+    <ClCompile Include="..\src\Rotate_Image.cpp" />
+    <ClCompile Include="..\src\Search_In_Rotated_Sorted_Array.cpp" />
+    <ClCompile Include="..\src\Search_In_Rotated_Sorted_Array_II.cpp" />
+    <ClCompile Include="..\src\Set_Matrix_Zeroes.cpp" />
+    <ClCompile Include="..\src\Single_Number.cpp" />
+    <ClCompile Include="..\src\Single_Number_II.cpp" />
     <ClCompile Include="..\src\Subsets.cpp" />
     <ClCompile Include="..\src\Subsets_II.cpp" />
+    <ClCompile Include="..\src\Trapping_Rain_Water.cpp" />
+    <ClCompile Include="..\src\Two_Sum.cpp" />
+    <ClCompile Include="..\src\Valid_Sudoku.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
