On Strings second part.

--- a/project/MyLeetCode.vcxproj
+++ b/project/MyLeetCode.vcxproj
@@ -65,26 +65,35 @@
     <ClCompile Include="..\src\3Sum_Closest.cpp" />
     <ClCompile Include="..\src\4Sum.cpp" />
     <ClCompile Include="..\src\Add_Binary.cpp" />
+    <ClCompile Include="..\src\Anagrams.cpp" />
     <ClCompile Include="..\src\Candy.cpp" />
     <ClCompile Include="..\src\Climbing_Stairs.cpp" />
     <ClCompile Include="..\src\Combinations.cpp" />
+    <ClCompile Include="..\src\Count_and_Say.cpp" />
     <ClCompile Include="..\src\Gas_Station.cpp" />
     <ClCompile Include="..\src\Gray_Code.cpp" />
     <ClCompile Include="..\src\Implement_strStr().cpp" />
+    <ClCompile Include="..\src\Integer_to_Roman.cpp" />
+    <ClCompile Include="..\src\Length_of_Last_Word.cpp" />
     <ClCompile Include="..\src\Letter_Combinations_of_Phone_Number.cpp" />
+    <ClCompile Include="..\src\Longest_Common_Prefix.cpp" />
     <ClCompile Include="..\src\Longest_Consecutive_Sequence.cpp" />
+    <ClCompile Include="..\src\Longest_Palindromic_Substring.cpp" />
     <ClCompile Include="..\src\Next_Permutation.cpp" />
     <ClCompile Include="..\src\Permutations.cpp" />
     <ClCompile Include="..\src\Permutations_II.cpp" />
     <ClCompile Include="..\src\Permutation_Sequence.cpp" />
     <ClCompile Include="..\src\Plus_One.cpp" />
+    <ClCompile Include="..\src\Regular_Expression_Matching.cpp" />
     <ClCompile Include="..\src\Remove_Duplicates_from_Sorted_Array.cpp" />
     <ClCompile Include="..\src\Remove_Duplicates_from_Sorted_Array_II.cpp" />
     <ClCompile Include="..\src\Remove_Element.cpp" />
+    <ClCompile Include="..\src\Roman_to_Integer.cpp" />
     <ClCompile Include="..\src\Rotate_Image.cpp" />
     <ClCompile Include="..\src\Search_In_Rotated_Sorted_Array.cpp" />
     <ClCompile Include="..\src\Search_In_Rotated_Sorted_Array_II.cpp" />
     <ClCompile Include="..\src\Set_Matrix_Zeroes.cpp" />
+    <ClCompile Include="..\src\Simplify_Path.cpp" />
     <ClCompile Include="..\src\Single_Number.cpp" />
     <ClCompile Include="..\src\Single_Number_II.cpp" />
     <ClCompile Include="..\src\String_to_Interger(atoi).cpp" />
@@ -92,8 +101,10 @@
     <ClCompile Include="..\src\Subsets_II.cpp" />
     <ClCompile Include="..\src\Trapping_Rain_Water.cpp" />
     <ClCompile Include="..\src\Two_Sum.cpp" />
+    <ClCompile Include="..\src\Valid_Number.cpp" />
     <ClCompile Include="..\src\Valid_Palindrome.cpp" />
     <ClCompile Include="..\src\Valid_Sudoku.cpp" />
+    <ClCompile Include="..\src\Wildcard_Matching.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
