--- a/project/MyLeetCode.vcxproj
+++ b/project/MyLeetCode.vcxproj
@@ -65,10 +65,12 @@
     <ClCompile Include="..\src\3Sum_Closest.cpp" />
     <ClCompile Include="..\src\4Sum.cpp" />
     <ClCompile Include="..\src\Add_Binary.cpp" />
+    <ClCompile Include="..\src\Add_Two_Numbers.cpp" />
     <ClCompile Include="..\src\Anagrams.cpp" />
     <ClCompile Include="..\src\Candy.cpp" />
     <ClCompile Include="..\src\Climbing_Stairs.cpp" />
     <ClCompile Include="..\src\Combinations.cpp" />
+    <ClCompile Include="..\src\Copy_List_with_Random_Pointer.cpp" />
     <ClCompile Include="..\src\Count_and_Say.cpp" />
     <ClCompile Include="..\src\Gas_Station.cpp" />
     <ClCompile Include="..\src\Gray_Code.cpp" />
@@ -76,10 +78,14 @@
     <ClCompile Include="..\src\Integer_to_Roman.cpp" />
     <ClCompile Include="..\src\Length_of_Last_Word.cpp" />
     <ClCompile Include="..\src\Letter_Combinations_of_Phone_Number.cpp" />
+    <ClCompile Include="..\src\Linked_List_Cycle.cpp" />
+    <ClCompile Include="..\src\Linked_List_Cycle_II.cpp" />
     <ClCompile Include="..\src\Longest_Common_Prefix.cpp" />
     <ClCompile Include="..\src\Longest_Consecutive_Sequence.cpp" />
     <ClCompile Include="..\src\Longest_Palindromic_Substring.cpp" />
+    <ClCompile Include="..\src\LRU_Cache.cpp" />
     <ClCompile Include="..\src\Next_Permutation.cpp" />
+    <ClCompile Include="..\src\Partition_List.cpp" />
     <ClCompile Include="..\src\Permutations.cpp" />
     <ClCompile Include="..\src\Permutations_II.cpp" />
     <ClCompile Include="..\src\Permutation_Sequence.cpp" />
@@ -87,9 +93,16 @@
     <ClCompile Include="..\src\Regular_Expression_Matching.cpp" />
     <ClCompile Include="..\src\Remove_Duplicates_from_Sorted_Array.cpp" />
     <ClCompile Include="..\src\Remove_Duplicates_from_Sorted_Array_II.cpp" />
+    <ClCompile Include="..\src\Remove_Duplicates_from_Sorted_List.cpp" />
+    <ClCompile Include="..\src\Remove_Duplicates_from_Sorted_List_II.cpp" />
     <ClCompile Include="..\src\Remove_Element.cpp" />
+    <ClCompile Include="..\src\Remove_Nth_Node_From_End_of_List.cpp" />
+    <ClCompile Include="..\src\Reorder_List.cpp" />
+    <ClCompile Include="..\src\Reverse_Linked_List_II.cpp" />
+    <ClCompile Include="..\src\Reverse_Nodes_in_k-Group.cpp" />
     <ClCompile Include="..\src\Roman_to_Integer.cpp" />
     <ClCompile Include="..\src\Rotate_Image.cpp" />
+    <ClCompile Include="..\src\Rotate_List.cpp" />
     <ClCompile Include="..\src\Search_In_Rotated_Sorted_Array.cpp" />
     <ClCompile Include="..\src\Search_In_Rotated_Sorted_Array_II.cpp" />
     <ClCompile Include="..\src\Set_Matrix_Zeroes.cpp" />
@@ -99,12 +112,14 @@
     <ClCompile Include="..\src\String_to_Interger(atoi).cpp" />
     <ClCompile Include="..\src\Subsets.cpp" />
     <ClCompile Include="..\src\Subsets_II.cpp" />
+    <ClCompile Include="..\src\Swap_Nodes_in_Pairs.cpp" />
     <ClCompile Include="..\src\Trapping_Rain_Water.cpp" />
     <ClCompile Include="..\src\Two_Sum.cpp" />
     <ClCompile Include="..\src\Valid_Number.cpp" />
     <ClCompile Include="..\src\Valid_Palindrome.cpp" />
     <ClCompile Include="..\src\Valid_Sudoku.cpp" />
     <ClCompile Include="..\src\Wildcard_Matching.cpp" />
+    <ClCompile Include="include.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
