--- a/project/MyLeetCode.vcxproj.filters
+++ b/project/MyLeetCode.vcxproj.filters
@@ -17,6 +17,9 @@
     <Filter Include="Source\Strings">
       <UniqueIdentifier>{d471385b-f545-49b5-a943-f9c51eaa7718}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source\Linked Lists">
+      <UniqueIdentifier>{d79336b3-d0b2-49f6-8e0a-8c0b3f8f77a9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
@@ -151,6 +154,49 @@
     </ClCompile>
     <ClCompile Include="..\src\Length_of_Last_Word.cpp">
       <Filter>Source\Strings</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Add_Two_Numbers.cpp">
+      <Filter>Source\Linked Lists</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Reverse_Linked_List_II.cpp">
+      <Filter>Source\Linked Lists</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Partition_List.cpp">
+      <Filter>Source\Linked Lists</Filter>
+    </ClCompile>
+    <ClCompile Include="include.cpp" />
+    <ClCompile Include="..\src\Remove_Duplicates_from_Sorted_List.cpp">
+      <Filter>Source\Linked Lists</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Remove_Duplicates_from_Sorted_List_II.cpp">
+      <Filter>Source\Linked Lists</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Rotate_List.cpp">
+      <Filter>Source\Linked Lists</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Remove_Nth_Node_From_End_of_List.cpp">
+      <Filter>Source\Linked Lists</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Swap_Nodes_in_Pairs.cpp">
+      <Filter>Source\Linked Lists</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Reverse_Nodes_in_k-Group.cpp">
+      <Filter>Source\Linked Lists</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Copy_List_with_Random_Pointer.cpp">
+      <Filter>Source\Linked Lists</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Linked_List_Cycle.cpp">
+      <Filter>Source\Linked Lists</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Linked_List_Cycle_II.cpp">
+      <Filter>Source\Linked Lists</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Reorder_List.cpp">
+      <Filter>Source\Linked Lists</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\LRU_Cache.cpp">
+      <Filter>Source\Linked Lists</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
