--- a/project/MyLeetCode.vcxproj
+++ b/project/MyLeetCode.vcxproj
@@ -72,10 +72,12 @@
     <ClCompile Include="..\src\Combinations.cpp" />
     <ClCompile Include="..\src\Copy_List_with_Random_Pointer.cpp" />
     <ClCompile Include="..\src\Count_and_Say.cpp" />
+    <ClCompile Include="..\src\Evaluate_Reverse_Polish_Notation.cpp" />
     <ClCompile Include="..\src\Gas_Station.cpp" />
     <ClCompile Include="..\src\Gray_Code.cpp" />
     <ClCompile Include="..\src\Implement_strStr().cpp" />
     <ClCompile Include="..\src\Integer_to_Roman.cpp" />
+    <ClCompile Include="..\src\Largest_Rectangle_in_Histogram.cpp" />
     <ClCompile Include="..\src\Length_of_Last_Word.cpp" />
     <ClCompile Include="..\src\Letter_Combinations_of_Phone_Number.cpp" />
     <ClCompile Include="..\src\Linked_List_Cycle.cpp" />
@@ -83,9 +85,13 @@
     <ClCompile Include="..\src\Longest_Common_Prefix.cpp" />
     <ClCompile Include="..\src\Longest_Consecutive_Sequence.cpp" />
     <ClCompile Include="..\src\Longest_Palindromic_Substring.cpp" />
+    <ClCompile Include="..\src\Longest_Valid_Parentheses.cpp" />
     <ClCompile Include="..\src\LRU_Cache.cpp" />
     <ClCompile Include="..\src\Next_Permutation.cpp" />
+    <ClCompile Include="..\src\Palindrome_Number.cpp" />
     <ClCompile Include="..\src\Partition_List.cpp" />
+    <ClCompile Include="..\src\Pascal%27s_Triangle.cpp" />
+    <ClCompile Include="..\src\Pascal%27s_Triangle_II.cpp" />
     <ClCompile Include="..\src\Permutations.cpp" />
     <ClCompile Include="..\src\Permutations_II.cpp" />
     <ClCompile Include="..\src\Permutation_Sequence.cpp" />
@@ -98,6 +104,7 @@
     <ClCompile Include="..\src\Remove_Element.cpp" />
     <ClCompile Include="..\src\Remove_Nth_Node_From_End_of_List.cpp" />
     <ClCompile Include="..\src\Reorder_List.cpp" />
+    <ClCompile Include="..\src\Reverse_Integer.cpp" />
     <ClCompile Include="..\src\Reverse_Linked_List_II.cpp" />
     <ClCompile Include="..\src\Reverse_Nodes_in_k-Group.cpp" />
     <ClCompile Include="..\src\Roman_to_Integer.cpp" />
@@ -117,8 +124,10 @@
     <ClCompile Include="..\src\Two_Sum.cpp" />
     <ClCompile Include="..\src\Valid_Number.cpp" />
     <ClCompile Include="..\src\Valid_Palindrome.cpp" />
+    <ClCompile Include="..\src\Valid_Parentheses.cpp" />
     <ClCompile Include="..\src\Valid_Sudoku.cpp" />
     <ClCompile Include="..\src\Wildcard_Matching.cpp" />
+    <ClCompile Include="..\src\ZigZag_Conversion.cpp" />
     <ClCompile Include="include.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
