--- a/project/MyLeetCode.vcxproj
+++ b/project/MyLeetCode.vcxproj
@@ -73,9 +73,12 @@
     <ClCompile Include="..\src\Copy_List_with_Random_Pointer.cpp" />
     <ClCompile Include="..\src\Count_and_Say.cpp" />
     <ClCompile Include="..\src\Evaluate_Reverse_Polish_Notation.cpp" />
+    <ClCompile Include="..\src\First_Missing_Positive.cpp" />
     <ClCompile Include="..\src\Gas_Station.cpp" />
     <ClCompile Include="..\src\Gray_Code.cpp" />
     <ClCompile Include="..\src\Implement_strStr().cpp" />
+    <ClCompile Include="..\src\Insertion_Sort_List.cpp" />
+    <ClCompile Include="..\src\Insert_Interval.cpp" />
     <ClCompile Include="..\src\Integer_to_Roman.cpp" />
     <ClCompile Include="..\src\Largest_Rectangle_in_Histogram.cpp" />
     <ClCompile Include="..\src\Length_of_Last_Word.cpp" />
@@ -87,6 +90,9 @@
     <ClCompile Include="..\src\Longest_Palindromic_Substring.cpp" />
     <ClCompile Include="..\src\Longest_Valid_Parentheses.cpp" />
     <ClCompile Include="..\src\LRU_Cache.cpp" />
+    <ClCompile Include="..\src\Merge_k_Sorted_Lists.cpp" />
+    <ClCompile Include="..\src\Merge_Sorted_Array.cpp" />
+    <ClCompile Include="..\src\Merge_Two_Sorted_Lists.cpp" />
     <ClCompile Include="..\src\Next_Permutation.cpp" />
     <ClCompile Include="..\src\Palindrome_Number.cpp" />
     <ClCompile Include="..\src\Partition_List.cpp" />
@@ -110,12 +116,17 @@
     <ClCompile Include="..\src\Roman_to_Integer.cpp" />
     <ClCompile Include="..\src\Rotate_Image.cpp" />
     <ClCompile Include="..\src\Rotate_List.cpp" />
+    <ClCompile Include="..\src\Search_a_2D_Matrix.cpp" />
+    <ClCompile Include="..\src\Search_for_a_Range.cpp" />
+    <ClCompile Include="..\src\Search_Insert_Position.cpp" />
     <ClCompile Include="..\src\Search_In_Rotated_Sorted_Array.cpp" />
     <ClCompile Include="..\src\Search_In_Rotated_Sorted_Array_II.cpp" />
     <ClCompile Include="..\src\Set_Matrix_Zeroes.cpp" />
     <ClCompile Include="..\src\Simplify_Path.cpp" />
     <ClCompile Include="..\src\Single_Number.cpp" />
     <ClCompile Include="..\src\Single_Number_II.cpp" />
+    <ClCompile Include="..\src\Sort_Colors.cpp" />
+    <ClCompile Include="..\src\Sort_List.cpp" />
     <ClCompile Include="..\src\String_to_Interger(atoi).cpp" />
     <ClCompile Include="..\src\Subsets.cpp" />
     <ClCompile Include="..\src\Subsets_II.cpp" />
