--- a/project/MyLeetCode.vcxproj
+++ b/project/MyLeetCode.vcxproj
@@ -77,6 +77,8 @@
     <ClCompile Include="..\src\Container_With_Most_Water.cpp" />
     <ClCompile Include="..\src\Copy_List_with_Random_Pointer.cpp" />
     <ClCompile Include="..\src\Count_and_Say.cpp" />
+    <ClCompile Include="..\src\Decode_Ways.cpp" />
+    <ClCompile Include="..\src\Edit_Distance.cpp" />
     <ClCompile Include="..\src\Evaluate_Reverse_Polish_Notation.cpp" />
     <ClCompile Include="..\src\First_Missing_Positive.cpp" />
     <ClCompile Include="..\src\Gas_Station.cpp" />
@@ -85,6 +87,7 @@
     <ClCompile Include="..\src\Insertion_Sort_List.cpp" />
     <ClCompile Include="..\src\Insert_Interval.cpp" />
     <ClCompile Include="..\src\Integer_to_Roman.cpp" />
+    <ClCompile Include="..\src\Interleaving_String.cpp" />
     <ClCompile Include="..\src\Jump_Game.cpp" />
     <ClCompile Include="..\src\Jump_Game_II.cpp" />
     <ClCompile Include="..\src\Largest_Rectangle_in_Histogram.cpp" />
@@ -103,6 +106,7 @@
     <ClCompile Include="..\src\Merge_k_Sorted_Lists.cpp" />
     <ClCompile Include="..\src\Merge_Sorted_Array.cpp" />
     <ClCompile Include="..\src\Merge_Two_Sorted_Lists.cpp" />
+    <ClCompile Include="..\src\Minimum_Path_Sum.cpp" />
     <ClCompile Include="..\src\Next_Permutation.cpp" />
     <ClCompile Include="..\src\Palindrome_Number.cpp" />
     <ClCompile Include="..\src\Palindrome_Partitioning_II.cpp" />
