--- a/project/MyLeetCode.vcxproj.filters
+++ b/project/MyLeetCode.vcxproj.filters
@@ -41,6 +41,12 @@
     <Filter Include="Source\Dynamic Programming">
       <UniqueIdentifier>{f87d76f7-56cd-45b6-bbda-440322b49cf7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source\Devide and Conquer">
+      <UniqueIdentifier>{e8eb151b-7526-4c4d-ac1f-32395138217d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Breadth-First Search">
+      <UniqueIdentifier>{32bcad58-4a7a-41ab-b4be-97f07109e199}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
@@ -335,6 +341,24 @@
     </ClCompile>
     <ClCompile Include="..\src\Word_Break_II.cpp">
       <Filter>Source\Dynamic Programming</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Pow(x, n).cpp">
+      <Filter>Source\Devide and Conquer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Sqrt(x).cpp">
+      <Filter>Source\Devide and Conquer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Scramble_String.cpp">
+      <Filter>Source\Dynamic Programming</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Word_Ladder.cpp">
+      <Filter>Source\Breadth-First Search</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Word_Ladder_II.cpp">
+      <Filter>Source\Breadth-First Search</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Surrounded_Regions.cpp">
+      <Filter>Source\Breadth-First Search</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
