--- a/project/MyLeetCode.vcxproj
+++ b/project/MyLeetCode.vcxproj
@@ -74,6 +74,7 @@
     <ClCompile Include="..\src\Climbing_Stairs.cpp" />
     <ClCompile Include="..\src\Clone_Graph.cpp" />
     <ClCompile Include="..\src\Combinations.cpp" />
+    <ClCompile Include="..\src\Combination_Sum_II.cpp" />
     <ClCompile Include="..\src\Container_With_Most_Water.cpp" />
     <ClCompile Include="..\src\Copy_List_with_Random_Pointer.cpp" />
     <ClCompile Include="..\src\Count_and_Say.cpp" />
@@ -83,6 +84,7 @@
     <ClCompile Include="..\src\Evaluate_Reverse_Polish_Notation.cpp" />
     <ClCompile Include="..\src\First_Missing_Positive.cpp" />
     <ClCompile Include="..\src\Gas_Station.cpp" />
+    <ClCompile Include="..\src\Generate_Parentheses.cpp" />
     <ClCompile Include="..\src\Gray_Code.cpp" />
     <ClCompile Include="..\src\Implement_strStr().cpp" />
     <ClCompile Include="..\src\Insertion_Sort_List.cpp" />
@@ -153,6 +155,7 @@
     <ClCompile Include="..\src\String_to_Interger(atoi).cpp" />
     <ClCompile Include="..\src\Subsets.cpp" />
     <ClCompile Include="..\src\Subsets_II.cpp" />
+    <ClCompile Include="..\src\Sudoku_Solver.cpp" />
     <ClCompile Include="..\src\Surrounded_Regions.cpp" />
     <ClCompile Include="..\src\Swap_Nodes_in_Pairs.cpp" />
     <ClCompile Include="..\src\Trapping_Rain_Water.cpp" />
@@ -169,7 +172,9 @@
     <ClCompile Include="..\src\Word_Break_II.cpp" />
     <ClCompile Include="..\src\Word_Ladder.cpp" />
     <ClCompile Include="..\src\Word_Ladder_II.cpp" />
+    <ClCompile Include="..\src\Word_Search.cpp" />
     <ClCompile Include="..\src\ZigZag_Conversion.cpp" />
+    <ClCompile Include="Combination_Sum.cpp" />
     <ClCompile Include="include.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
