--- a/project/MyLeetCode.vcxproj.filters
+++ b/project/MyLeetCode.vcxproj.filters
@@ -381,9 +381,6 @@
     <ClCompile Include="..\src\Restore_IP_Addresses.cpp">
       <Filter>Source\Depth-First Search</Filter>
     </ClCompile>
-    <ClCompile Include="Combination_Sum.cpp">
-      <Filter>Source\Depth-First Search</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\Combination_Sum_II.cpp">
       <Filter>Source\Depth-First Search</Filter>
     </ClCompile>
@@ -394,6 +391,9 @@
       <Filter>Source\Depth-First Search</Filter>
     </ClCompile>
     <ClCompile Include="..\src\Word_Search.cpp">
+      <Filter>Source\Depth-First Search</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Combination_Sum.cpp">
       <Filter>Source\Depth-First Search</Filter>
     </ClCompile>
   </ItemGroup>
